Adiciona estilos para tablet

--- a/css/header.css
+++ b/css/header.css
@@ -17,6 +17,7 @@ header {
 
 .navegacao__menu {
   margin-top: 24px;
+  width: 467px;
 }
 
 input[type="checkbox"]:checked ~ nav {
@@ -43,4 +44,27 @@ nav {
 .lista__links li a {
   color: var(--text-secondary-color);
   text-decoration: none;
+  font-weight: var(--menu-text-weight);
+  font-size: 24px;
+}
+
+@media (min-width: 768px) {
+  .navegacao__menu {
+    margin-top: 0;
+  }
+  .navegacao__menu label {
+    display: none;
+  }
+  .navegacao__menu nav {
+    display: block;
+  }
+  .navegacao__menu ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+  }
+  .navegacao__menu li {
+    margin: 0;
+  }
 }
