--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,14 @@ header {
   height: 64px;
 }
 
+.logo__mobile {
+  display: block;
+}
+
+.logo__desktop {
+  display: none;
+}
+
 .navegacao__menu {
   margin-top: 24px;
   width: 467px;
@@ -66,5 +74,30 @@ nav {
   }
   .navegacao__menu li {
     margin: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  header {
+    padding: 38px 120px;
+  }
+  .logo {
+    width: 260px;
+    height: 64px;
+  }
+  .img__desktop {
+    display: block;
+  }
+  .img__mobile {
+    display: none;
+  }
+  .navegacao__menu a:hover {
+    color: var(--text-primary-color);
+  }
+}
+
+@media (min-width: 1920px) {
+  header {
+    padding: 38px 160px;
   }
 }
