--- a/css/global.css
+++ b/css/global.css
@@ -10,8 +10,8 @@
   --background-secondary-color: #f5f5f5;
   --background-tertiary-color: #000000;
 
-  --primary-color: #bf0101;
-  --secondary-color: #b81515;
+  --primary-color: #b81515;
+  --secondary-color: #8f0101;
 
   --text-primary-color: #222222;
   --text-secondary-color: #ffffff;
@@ -58,8 +58,27 @@ body {
   margin: 16px auto 32px;
 }
 
+.card__button {
+  width: 280px;
+  height: 64px;
+  color: var(--text-secondary-color);
+  font-weight: var(--title-weight);
+  font-size: 20px;
+  background-color: var(--primary-color);
+  border-radius: 16px;
+  display: inline-block;
+  text-decoration: none;
+  line-height: 64px;
+}
+
 @media screen and (min-width: 768px) {
   .section__title h2 {
     font-size: 32px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .card__button:hover {
+    background-color: var(--secondary-color);
   }
 }
