--- a/css/offers.css
+++ b/css/offers.css
@@ -1,3 +1,10 @@
+.offers__cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
 .card {
   color: var(--text-secondary-color);
   background-color: black;
@@ -53,9 +60,17 @@
   background-size: cover;
 }
 
+@media screen and (min-width: 768px) {
+  .offers__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .card {
-    width: 588px;
+    width: 420px;
     height: 308px;
   }
   .card header h3 {
@@ -64,5 +79,18 @@
 
   .card header span {
     font-size: 40px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .card {
+    width: 588px;
+  }
+}
+
+@media screen and (min-width: 19200px) {
+  .offers__cards {
+    width: 1250px;
+    margin: 0 auto;
   }
 }
