--- a/css/offers.css
+++ b/css/offers.css
@@ -5,7 +5,7 @@
   gap: 24px;
 }
 
-.card {
+.offers__cards .card {
   color: var(--text-secondary-color);
   background-color: black;
   width: 312px;
@@ -15,7 +15,7 @@
   border-radius: 16px;
   text-align: center;
 }
-.card header {
+.offers__cards .card header {
   display: block;
   background: transparent;
   position: static;
@@ -23,18 +23,18 @@
   margin-bottom: 24px;
 }
 
-.card header p {
+.offers__cards .card header p {
   font-size: 20px;
   font-weight: var(--text-weight);
 }
 
-.card header h3 {
+.offers__cards .card header h3 {
   font-size: 40px;
   font-weight: var(--title-weight);
   margin: 8px 0 0;
 }
 
-.card header span {
+.offers__cards .card header span {
   font-size: 32px;
   margin-top: 24px;
   display: inline-block;
@@ -60,6 +60,10 @@
   background-size: cover;
 }
 
+.offers {
+  margin-bottom: 104px;
+}
+
 @media screen and (min-width: 768px) {
   .offers__cards {
     flex-direction: row;
@@ -69,21 +73,21 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .card {
+  .offers__cards .card {
     width: 420px;
     height: 308px;
   }
-  .card header h3 {
+  .offers__cards .card header h3 {
     font-size: 48px;
   }
 
-  .card header span {
+  .offers__cards .card header span {
     font-size: 40px;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .card {
+  .offers__cards .card {
     width: 588px;
   }
 }
