--- a/css/destines.css
+++ b/css/destines.css
@@ -1,7 +1,78 @@
-.destines .item header {
-  display: block;
-  background: transparent;
-  position: static;
-  padding: 0;
+.destines {
+  width: 312px;
+  margin: 0 auto;
+}
+.destines__items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
+.destines .item .img__item {
+  width: 100%;
+  height: 368px;
+}
+.destines .item.tokyo .img__item {
+  background: url(../img/destinos_mobile_tokyo.jpg);
+  background-size: cover;
+}
+.destines .item.osaka .img__item {
+  background: url(../img/destinos_mobile_osaka.jpg);
+  background-size: cover;
+}
+
+.destines .item header h4 {
+  font-size: 28px;
+  font-weight: var(--title-weight);
+  margin: 24px 0;
+}
+.destines .item p {
+  font-size: 20px;
+  font-weight: var(--text-weight);
+  line-height: 32px;
   margin-bottom: 24px;
+}
+
+.destines .card__button {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .destines {
+    width: 648px;
+  }
+  .destines .item .img__item {
+    width: 100%;
+    height: 452px;
+  }
+  .destines .item.tokyo .img__item {
+    background: url(../img/destinos_desk_tokyo.jpg);
+    background-size: cover;
+  }
+  .destines .item.osaka .img__item {
+    background: url(../img/destinos_desk_osaka.jpg);
+    background-size: cover;
+  }
+  .destines .card__button {
+    width: 280px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .destines {
+    width: 900px;
+  }
+
+  .destines .item .img__item {
+    width: 100%;
+    height: 452px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .destines {
+    width: 1200px;
+  }
+  .destines__items {
+    flex-direction: row;
+  }
 }
