--- a/css/global.css
+++ b/css/global.css
@@ -43,6 +43,20 @@ body {
   color: var(--text-primary-color);
 }
 
+section {
+  width: 312px;
+  margin: 0 auto 88px;
+}
+
+section.hero {
+  width: 100%;
+  margin: 0;
+}
+.section__title {
+  width: 280px;
+  margin: 0 auto 32px;
+}
+
 .section__title h2 {
   font-size: 28px;
   font-weight: var(--title-weight);
@@ -59,7 +73,7 @@ body {
 }
 
 .card__button {
-  width: 280px;
+  min-width: 280px;
   height: 64px;
   color: var(--text-secondary-color);
   font-weight: var(--title-weight);
@@ -69,16 +83,32 @@ body {
   display: inline-block;
   text-decoration: none;
   line-height: 64px;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
+  section {
+    width: 648px;
+  }
+  .section__title {
+    width: 100%;
+  }
   .section__title h2 {
     font-size: 32px;
   }
 }
 
 @media screen and (min-width: 1024px) {
+  section {
+    width: 900px;
+  }
   .card__button:hover {
     background-color: var(--secondary-color);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  section {
+    width: 1200px;
   }
 }
