--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-header {
+.main__header {
   background-color: var(--background-tertiary-color);
   display: flex;
   flex-direction: row;
@@ -77,7 +77,7 @@ nav {
 }
 
 @media (min-width: 1024px) {
-  header {
+  .main__header {
     padding: 38px 120px;
   }
   .logo {
@@ -96,7 +96,7 @@ nav {
 }
 
 @media (min-width: 1920px) {
-  header {
+  .main__header {
     padding: 38px 160px;
   }
 }
