--- a/css/destines.css
+++ b/css/destines.css
@@ -2,7 +2,7 @@
   width: 312px;
   margin: 0 auto;
 }
-.destines__items {
+.destines__itens {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,7 +72,7 @@
   .destines {
     width: 1200px;
   }
-  .destines__items {
+  .destines__itens {
     flex-direction: row;
   }
 }
